--- a/AutoRepairService.WPF/AutoRepairService.WPF.csproj
+++ b/AutoRepairService.WPF/AutoRepairService.WPF.csproj
@@ -27,15 +27,12 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
+    <PackageReference Include="SimpleModal.WPF" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AutoRepairService.Domain\AutoRepairService.Domain.csproj" />
     <ProjectReference Include="..\AutoRepairService.Infrastructure\AutoRepairService.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\" />
   </ItemGroup>
 
 </Project>
