import models from existing db, update repos

--- a/AutoRepairService.WPF/appsettings.json
+++ b/AutoRepairService.WPF/appsettings.json
@@ -8,6 +8,6 @@
     "**/platforms"
   ],
   "ConnectionStrings": {
-    "Default": ""
+    "Default": "Data Source=DESKTOP-SLLIEBR\\SQLEXPRESS;Initial Catalog=Service;Integrated Security=True; Trusted_Connection=True; TrustServerCertificate=True"
   }
 }
