--- a/AutoRepairService.WPF/AutoRepairService.WPF.csproj
+++ b/AutoRepairService.WPF/AutoRepairService.WPF.csproj
@@ -12,6 +12,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="D:\visual_Studio_project\AutoRepairService\AutoRepairService.WPF\.editorconfig" />
   </ItemGroup>
 
