--- a/AutoRepairService.WPF/appsettings.json
+++ b/AutoRepairService.WPF/appsettings.json
@@ -8,6 +8,7 @@
     "**/platforms"
   ],
   "ConnectionStrings": {
-    "Default": "Data Source=(local)\\SQLEXPRESS;Initial Catalog=Service;Integrated Security=True; Trusted_Connection=True; TrustServerCertificate=True;"
+    "Default": "Data Source=(local)\\SQLEXPRESS;Initial Catalog=Service;Integrated Security=True; Trusted_Connection=True; TrustServerCertificate=True;",
+    "Desktop": "Data Source=DESKTOP-0D1UU6P;Initial Catalog=Service;Integrated Security=True; Trust Server Certificate= True;"
   }
 }
